--- a/Identity/Identity.csproj
+++ b/Identity/Identity.csproj
@@ -14,11 +14,15 @@
     <None Remove="Microsoft.AspNetCore.Identity" />
     <None Remove="IdentityPolicy\" />
     <None Remove="Views\Account\" />
+    <None Remove="Views\Role\" />
+    <None Remove="CustomTagHelpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Admin\" />
     <Folder Include="IdentityPolicy\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Views\Role\" />
+    <Folder Include="CustomTagHelpers\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
