--- a/Identity/Identity.csproj
+++ b/Identity/Identity.csproj
@@ -16,6 +16,7 @@
     <None Remove="Views\Account\" />
     <None Remove="Views\Role\" />
     <None Remove="CustomTagHelpers\" />
+    <None Remove="Views\Claims\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Admin\" />
@@ -23,6 +24,7 @@
     <Folder Include="Views\Account\" />
     <Folder Include="Views\Role\" />
     <Folder Include="CustomTagHelpers\" />
+    <Folder Include="Views\Claims\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
