--- a/Identity/Identity.csproj
+++ b/Identity/Identity.csproj
@@ -17,6 +17,7 @@
     <None Remove="Views\Role\" />
     <None Remove="CustomTagHelpers\" />
     <None Remove="Views\Claims\" />
+    <None Remove="CustomPolicy\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Admin\" />
@@ -25,6 +26,7 @@
     <Folder Include="Views\Role\" />
     <Folder Include="CustomTagHelpers\" />
     <Folder Include="Views\Claims\" />
+    <Folder Include="CustomPolicy\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
